--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -1,11 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap');
+/* ################################################################################## */
+/* SIZING FOR THE SMALLEST MOBILE PHONES FIRST                                        */
+/* WIDTH BETWEEN 320 AND 359 PIXELS                                                   */
+/* ################################################################################## */
+* {
+    margin: 0;
+    padding: 0;
+}
+
 header {
     width: 320px;
     overflow: hidden;
 }
 
 h1 {
-    position:relative;
+    position: relative;
     animation: message-display 10s infinite;
     width: 680px;
     height: 30px;
@@ -16,15 +25,17 @@ h1 {
     overflow: hidden;
     white-space: nowrap;
 }
+
 /* ################################################################################## */
 /* LAYOUT OF THE CANVAS                                                                */
 
 #canvas {
     position: relative;
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
     width: 320px;
     height: 430px;
+    margin: 0 auto;
     background-color: rgb(218, 235, 235);
     background-size: cover;
     overflow: hidden;
@@ -32,14 +43,15 @@ h1 {
 }
 
 #computer-score {
-    position:absolute;
+    position: absolute;
     top: 25px;
     left: 5px;
     /* background-color: aliceblue; */
     font-size: 30px;
 }
+
 #settings-panel {
-    position:absolute;
+    position: absolute;
     top: 5px;
     left: 50px;
     width: 220px;
@@ -48,60 +60,61 @@ h1 {
 }
 
 #rounds-counter-panel {
-    display:none;   
-    position:absolute;
+    display: none;
+    position: absolute;
     top: 5px;
     left: 50px;
     width: 220px;
     text-align: center;
-    font-size: 30px; 
+    font-size: 30px;
 }
 
 #rounds-counter-text {
     font-size: 17px;
 }
+
 #user-score {
-    position:absolute;
-    top:25px;
+    position: absolute;
+    top: 25px;
     left: 290px;
     /* background-color: aliceblue; */
     font-size: 30px;
 }
 
 #computer-pick-image-panel {
-    position:absolute;
+    position: absolute;
     top: 120px;
     left: 5px;
     width: 100px;
-    height: 100px;    
+    height: 100px;
 }
 
 #computer-pick-image {
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
     height: 100px;
     width: 100px;
     object-fit: contain;
 }
 
 #user-pick-image-panel {
-    position:absolute;
+    position: absolute;
     top: 120px;
     left: 210px;
     width: 100px;
-    height: 100px;    
+    height: 100px;
 }
 
 #user-pick-image {
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
     height: 100px;
     width: 100px;
     object-fit: contain;
 }
 
 #versus-text {
-    position:absolute;
+    position: absolute;
     top: 150px;
     left: 125px;
     font-size: 30px;
@@ -109,9 +122,9 @@ h1 {
 
 #outcome-text {
     position: absolute;
-    top:70px;
+    top: 70px;
     left: 5px;
-    width:95%;
+    width: 95%;
     height: 50px;
     /* background-color: green; */
     text-align: center;
@@ -119,7 +132,7 @@ h1 {
 }
 
 #message-text {
-    position:absolute;
+    position: absolute;
     top: 230px;
     left: 5px;
     width: 95%;
@@ -129,7 +142,7 @@ h1 {
 }
 
 #restart-button {
-    position:absolute;
+    position: absolute;
     top: 280px;
     left: 5px;
     width: 95%;
@@ -137,8 +150,9 @@ h1 {
     text-align: center;
     /* background-color: rgb(180, 135, 135); */
 }
-#restart-button img {   
-    position:relative;
+
+#restart-button img {
+    position: relative;
     top: 0;
     left: 0;
     width: 50px;
@@ -146,6 +160,7 @@ h1 {
     object-fit: contain;
     margin: 0 auto;
 }
+
 #user-option-panel {
     position: absolute;
     top: 340px;
@@ -163,14 +178,14 @@ h1 {
 /* ############################################################################ */
 /* PANEL WITH OPTIONS FROM WHICH THE USER CAN PICK THEIR MOVE                  */
 #user-rock-button {
-    position:absolute;
-    top:0;
+    position: absolute;
+    top: 0;
     left: 0;
     width: 50px;
     height: 50px;
 }
 
-#user-rock-button-image {      
+#user-rock-button-image {
     width: 50px;
     height: 50px;
     z-index: 1;
@@ -178,8 +193,8 @@ h1 {
 
 #user-rock-button-image-gray {
     display: none;
-    position:absolute;
-    top:0;
+    position: absolute;
+    top: 0;
     left: 0;
     width: 50px;
     height: 50px;
@@ -191,7 +206,7 @@ h1 {
     display: inline;
 }
 
-#user-rock-button:active{
+#user-rock-button:active {
     transform: translateY(5px);
 }
 
@@ -200,8 +215,8 @@ h1 {
 }
 
 #user-paper-button {
-    position:absolute;
-    top:0;
+    position: absolute;
+    top: 0;
     left: 55px;
     width: 50px;
     height: 50px;
@@ -215,8 +230,8 @@ h1 {
 
 #user-paper-button-image-gray {
     display: none;
-    position:absolute;
-    top:0;
+    position: absolute;
+    top: 0;
     left: 0;
     width: 50px;
     height: 50px;
@@ -227,16 +242,17 @@ h1 {
     display: inline;
 }
 
-#user-paper-button:active{
+#user-paper-button:active {
     transform: translateY(5px);
 }
+
 #user-paper-button:active #user-paper-button-image-gray {
     display: inline;
 }
 
 #user-scissors-button {
-    position:absolute;
-    top:0;
+    position: absolute;
+    top: 0;
     left: 110px;
     width: 50px;
     height: 50px;
@@ -251,27 +267,29 @@ h1 {
 
 #user-scissors-button-image-gray {
     display: none;
-    position:absolute;
-    top:0;
+    position: absolute;
+    top: 0;
     left: 0;
     width: 50px;
     height: 50px;
     z-index: 2;
 }
+
 #user-scissors-button:hover #user-scissors-button-image-gray {
     display: inline;
 }
 
-#user-scissors-button:active{
+#user-scissors-button:active {
     transform: translateY(5px);
 }
+
 #user-scissors-button:active #user-scissors-button-image-gray {
     display: inline;
 }
 
 #user-lizard-button {
-    position:absolute;
-    top:0;
+    position: absolute;
+    top: 0;
     left: 165px;
     width: 50px;
     height: 50px;
@@ -285,27 +303,29 @@ h1 {
 
 #user-lizard-button-image-gray {
     display: none;
-    position:absolute;
-    top:0;
+    position: absolute;
+    top: 0;
     left: 0;
     width: 50px;
     height: 50px;
     z-index: 2;
 }
+
 #user-lizard-button:hover #user-lizard-button-image-gray {
     display: inline;
 }
 
-#user-lizard-button:active{
+#user-lizard-button:active {
     transform: translateY(5px);
 }
+
 #user-lizard-button:active #user-lizard-button-image-gray {
     display: inline;
 }
 
 #user-spock-button {
-    position:absolute;
-    top:0;
+    position: absolute;
+    top: 0;
     left: 225px;
     width: 50px;
     height: 50px;
@@ -319,23 +339,402 @@ h1 {
 
 #user-spock-button-image-gray {
     display: none;
-    position:absolute;
-    top:0;
+    position: absolute;
+    top: 0;
     left: 0;
     width: 50px;
     height: 50px;
     z-index: 2;
 }
+
 #user-spock-button:hover #user-spock-button-image-gray {
     display: inline;
 }
 
-#user-spock-button:active{
+#user-spock-button:active {
     transform: translateY(5px);
 }
+
 #user-spock-button:active #user-spock-button-image-gray {
     display: inline;
 }
+
+/* 
+    ##Device = Most of the Smartphones Mobiles (Portrait)
+    ##Screen = B/w 360px to 479px
+  */
+
+@media (min-width: 360px) and (max-width: 480px) {
+
+    header {
+        width: 360px;
+    }
+
+    h1 {
+        width: 680px;
+        height: 30px;
+        margin: 0;
+        padding: 5px 0;
+        font-size: 20px;
+    }
+
+    /* ################################################################################## */
+    /* LAYOUT OF THE CANVAS                                                                */
+
+    #canvas {
+        width: 360px;
+        height: 600px;
+    }
+
+    #computer-score {
+        top: 25px;
+        left: 5px;
+        font-size: 40px;
+    }
+
+    #settings-panel {
+        top: 5px;
+        left: 60px;
+        width: 240px;
+    }
+
+    #rounds-counter-panel {
+        top: 5px;
+        left: 60px;
+        width: 220px;
+        font-size: 40px;
+    }
+
+    #rounds-counter-text {
+        font-size: 17px;
+    }
+
+    #user-score {
+        top: 25px;
+        left: 320px;
+        font-size: 40px;
+    }
+
+    #computer-pick-image-panel {
+        top: 170px;
+        left: 0;
+        width: 150px;
+        height: 150px;
+    }
+
+    #computer-pick-image {
+        top: 0;
+        left: 0;
+        height: 150px;
+        width: 150px;
+    }
+
+    #user-pick-image-panel {
+        top: 170px;
+        left: 220px;
+        width: 150px;
+        height: 150px;
+    }
+
+    #user-pick-image {
+        top: 0;
+        left: 0;
+        height: 150px;
+        width: 150px;
+    }
+
+    #versus-text {
+        top: 250px;
+        left: 150px;
+        font-size: 30px;
+    }
+
+    #outcome-text {
+        top: 90px;
+        left: 5px;
+        width: 95%;
+        height: 60px;
+        font-size: 40px;
+    }
+
+    #message-text {
+        top: 330px;
+        left: 5px;
+        width: 95%;
+        font-size: 25px;
+    }
+
+    #restart-button {
+        top: 400px;
+        left: 20px;
+        width: 95%;
+        height: 70px;
+    }
+
+    #restart-button img {
+        top: 0;
+        left: 0;
+        width: 70px;
+        height: 70px;
+    }
+
+    #user-option-panel {
+        top: 490px;
+        left: 0;
+        height: 60px;
+        width: 320px;
+    }
+
+    /* ############################################################################ */
+    /* PANEL WITH OPTIONS FROM WHICH THE USER CAN PICK THEIR MOVE                  */
+    #user-rock-button {
+        top: 0;
+        left: 0;
+        width: 60px;
+        height: 60px;
+    }
+
+    #user-rock-button-image {
+        width: 60px;
+        height: 60px;
+    }
+
+    #user-rock-button-image-gray {
+        top: 0;
+        left: 0;
+        width: 60px;
+        height: 60px;
+    }
+
+    #user-paper-button {
+        top: 0;
+        left: 70px;
+        width: 60px;
+        height: 60px;
+    }
+
+    #user-paper-button-image {
+        width: 60px;
+        height: 60px;
+    }
+
+    #user-paper-button-image-gray {
+        width: 60px;
+        height: 60px;       
+    }
+
+    #user-scissors-button {
+        top: 0;
+        left: 130px;
+        width: 60px;
+        height: 60px;
+    }
+
+    #user-scissors-button-image {
+        width: 60px;
+        height: 60px;
+    }
+
+
+    #user-scissors-button-image-gray {
+        width: 60px;
+        height: 60px;        
+    }
+
+    #user-lizard-button {
+        top: 0;
+        left: 190px;
+        width: 60px;
+        height: 60px;
+    }
+
+    #user-lizard-button-image {
+        width: 60px;
+        height: 60px;
+    }
+
+    #user-lizard-button-image-gray {
+        width: 60px;
+        height: 60px;
+    }
+
+    #user-spock-button {
+        position: absolute;
+        top: 0;
+        left: 260px;
+        width: 60px;
+        height: 60px;
+    }
+
+    #user-spock-button-image {
+        width: 60px;
+        height: 60px;
+    }
+
+    #user-spock-button-image-gray {
+        width: 60px;
+        height: 60px;
+    }
+
+
+    @keyframes message-display {
+        0% {
+            left: 360px;
+        }
+
+        90% {
+            left: -400px;
+        }
+
+        100% {
+            left: -640px;
+        }
+
+    }
+
+}
+
+
+/* 
+    ##Device = Low Resolution Tablets, Mobiles (Landscape)
+    ##Screen = B/w 481px to 767px
+  */
+
+@media (min-width: 481px) and (max-width: 767px) {
+
+    /* CSS */
+
+
+
+
+
+
+
+
+
+
+    @keyframes message-display {
+        0% {
+            left: 320px;
+        }
+
+        90% {
+            left: -400px;
+        }
+
+        100% {
+            left: -640px;
+        }
+
+    }
+
+}
+
+/* 
+    ##Device = Tablets, Ipads (landscape)
+    ##Screen = B/w 768px to 1024px
+  */
+
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+
+    /* CSS */
+
+
+
+
+
+
+
+
+
+
+    @keyframes message-display {
+        0% {
+            left: 320px;
+        }
+
+        90% {
+            left: -400px;
+        }
+
+        100% {
+            left: -640px;
+        }
+
+    }
+
+}
+
+/* 
+    ##Device = Tablets, Ipads (portrait)
+    ##Screen = B/w 768px to 1024px
+  */
+
+@media (min-width: 768px) and (max-width: 1024px) {
+
+    /* CSS */
+
+
+
+
+
+
+
+
+
+
+    @keyframes message-display {
+        0% {
+            left: 320px;
+        }
+
+        90% {
+            left: -400px;
+        }
+
+        100% {
+            left: -640px;
+        }
+
+    }
+
+}
+
+/* 
+    ##Device = Laptops, Desktops
+    ##Screen = B/w 1025px to 1280px
+  */
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+
+    /* CSS */
+
+
+
+
+
+
+
+
+
+
+    @keyframes message-display {
+        0% {
+            left: 320px;
+        }
+
+        90% {
+            left: -400px;
+        }
+
+        100% {
+            left: -640px;
+        }
+
+    }
+
+}
+
 
 /* 
   ##Device = Desktops
@@ -343,75 +742,31 @@ h1 {
 */
 
 @media (min-width: 1281px) {
-  
-    /* CSS */
-    
-  }
-  
-  /* 
-    ##Device = Laptops, Desktops
-    ##Screen = B/w 1025px to 1280px
-  */
-  
-  @media (min-width: 1025px) and (max-width: 1280px) {
-    
-    /* CSS */
-    
-  }
-  
-  /* 
-    ##Device = Tablets, Ipads (portrait)
-    ##Screen = B/w 768px to 1024px
-  */
-  
-  @media (min-width: 768px) and (max-width: 1024px) {
-    
-    /* CSS */
-    
-  }
-  
-  /* 
-    ##Device = Tablets, Ipads (landscape)
-    ##Screen = B/w 768px to 1024px
-  */
-  
-  @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-    
-    /* CSS */
-    
-  }
-  
-  /* 
-    ##Device = Low Resolution Tablets, Mobiles (Landscape)
-    ##Screen = B/w 481px to 767px
-  */
-  
-  @media (min-width: 481px) and (max-width: 767px) {
-    
-    /* CSS */
-    
-  }
-  
-  /* 
-    ##Device = Most of the Smartphones Mobiles (Portrait)
-    ##Screen = B/w 320px to 479px
-  */
-  
-  @media (min-width: 320px) and (max-width: 480px) {
-    
-    /* CSS */
-    
-  }
 
-  @keyframes message-display {
-    0% {
-        left: 320px;
-    }     
-    90% {
-        left: -400px;
+    /* CSS */
+
+
+
+
+
+
+
+
+
+
+    @keyframes message-display {
+        0% {
+            left: 320px;
+        }
+
+        90% {
+            left: -400px;
+        }
+
+        100% {
+            left: -640px;
+        }
+
     }
-    100% {
-        left: -640px;
-    }
-    
-  }
+
+}
