--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -165,6 +165,7 @@ h1 {
     height: 50px;
     width: 280px;
     background-color: rgb(159 173 174 / 29%);
+    display: flex;
 }
 
 .gray-border {
@@ -175,7 +176,8 @@ h1 {
 /* ############################################################################ */
 /* PANEL WITH OPTIONS FROM WHICH THE USER CAN PICK THEIR MOVE                  */
 #user-rock-button {
-    position: absolute;
+    position: relative;
+    margin: 0 auto;
     top: 0;
     left: 0;
     width: 50px;
@@ -212,9 +214,10 @@ h1 {
 }
 
 #user-paper-button {
-    position: absolute;
+    position: relative;
+    margin: 0 auto;
     top: 0;
-    left: 55px;
+    left: 0;
     width: 50px;
     height: 50px;
 }
@@ -248,9 +251,10 @@ h1 {
 }
 
 #user-scissors-button {
-    position: absolute;
+    position: relative;
+    margin: 0 auto;
     top: 0;
-    left: 110px;
+    left: 0;
     width: 50px;
     height: 50px;
 }
@@ -285,9 +289,10 @@ h1 {
 }
 
 #user-lizard-button {
-    position: absolute;
+    position: relative;
+    margin: 0 auto;
     top: 0;
-    left: 165px;
+    left: 0;
     width: 50px;
     height: 50px;
 }
@@ -321,9 +326,10 @@ h1 {
 }
 
 #user-spock-button {
-    position: absolute;
+    position: relative;
+    margin: 0 auto;
     top: 0;
-    left: 225px;
+    left: 0;
     width: 50px;
     height: 50px;
 }
@@ -500,8 +506,6 @@ h1 {
     /* ############################################################################ */
     /* PANEL WITH OPTIONS FROM WHICH THE USER CAN PICK THEIR MOVE                  */
     #user-rock-button {
-        top: 0;
-        left: 0;
         width: 60px;
         height: 60px;
     }
@@ -512,15 +516,11 @@ h1 {
     }
 
     #user-rock-button-image-gray {
-        top: 0;
-        left: 0;
         width: 60px;
         height: 60px;
     }
 
     #user-paper-button {
-        top: 0;
-        left: 70px;
         width: 60px;
         height: 60px;
     }
@@ -536,8 +536,6 @@ h1 {
     }
 
     #user-scissors-button {
-        top: 0;
-        left: 130px;
         width: 60px;
         height: 60px;
     }
@@ -554,8 +552,6 @@ h1 {
     }
 
     #user-lizard-button {
-        top: 0;
-        left: 190px;
         width: 60px;
         height: 60px;
     }
@@ -571,9 +567,6 @@ h1 {
     }
 
     #user-spock-button {
-        position: absolute;
-        top: 0;
-        left: 260px;
         width: 60px;
         height: 60px;
     }
@@ -740,8 +733,6 @@ h1 {
     /* ############################################################################ */
     /* PANEL WITH OPTIONS FROM WHICH THE USER CAN PICK THEIR MOVE                  */
     #user-rock-button {
-        top: 0;
-        left: 0;
         width: 90px;
         height: 90px;
     }
@@ -752,15 +743,11 @@ h1 {
     }
 
     #user-rock-button-image-gray {
-        top: 0;
-        left: 0;
         width: 90px;
         height: 90px;
     }
 
     #user-paper-button {
-        top: 0;
-        left: 90px;
         width: 90px;
         height: 90px;
     }
@@ -776,8 +763,6 @@ h1 {
     }
 
     #user-scissors-button {
-        top: 0;
-        left: 180px;
         width: 90px;
         height: 90px;
     }
@@ -794,8 +779,6 @@ h1 {
     }
 
     #user-lizard-button {
-        top: 0;
-        left: 270px;
         width: 90px;
         height: 90px;
     }
@@ -811,9 +794,6 @@ h1 {
     }
 
     #user-spock-button {
-        position: absolute;
-        top: 0;
-        left: 350px;
         width: 90px;
         height: 90px;
     }
@@ -851,56 +831,208 @@ h1 {
   */
 
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-
-    /* CSS */
-
-
-
-
-
-
-
-
-
-
-    @keyframes message-display {
-        0% {
-            left: 320px;
-        }
-
-        90% {
-            left: -400px;
-        }
-
-        100% {
-            left: -640px;
-        }
-
+    header {
+        width: 700px;
+        margin: 0 auto;
     }
 
-}
+    h1 {
+        width: 1200px;
+        height: 30px;
+        padding: 5px 0;
+        font-size: 20px;
+        animation: message-display-landscape 10s infinite;
+    }
 
-/* 
-    ##Device = Tablets, Ipads (portrait)
-    ##Screen = B/w 768px to 1024px
-  */
+    /* ################################################################################## */
+    /* LAYOUT OF THE CANVAS                                                                */
 
-@media (min-width: 768px) and (max-width: 1024px) {
+    #canvas {
+        width: 720px;
+        height: 500px;
+    }
 
-    /* CSS */
+    #computer-score {
+        top: 5px;
+        left: 20px;
+        font-size: 30px;
+    }
+
+    #user-score {
+        top: 5px;
+        left: 680px;
+        font-size: 30px;
+    }
+
+    #settings-panel {
+        top: 5px;
+        left: 230px;
+        width: 240px;
+    }
+
+    #rounds-counter-panel {
+        top: 5px;
+        left: 230px;
+        width: 280px;
+        font-size: 30px;
+    }
+
+    #rounds-counter-text {
+        font-size: 17px;
+    }
+
+    #computer-pick-image-panel {
+        top: 120px;
+        left: 50px;
+        width: 150px;
+        height: 150px;
+    }
+
+    #computer-pick-image {
+        top: 0;
+        left: 0;
+        height: 150px;
+        width: 150px;
+    }
+
+    #user-pick-image-panel {
+        top: 120px;
+        left: 520px;
+        width: 150px;
+        height: 150px;
+    }
+
+    #user-pick-image {
+        top: 0;
+        left: 0;
+        height: 150px;
+        width: 150px;
+    }
+
+    #versus-text {
+        top: 150px;
+        left: 310px;
+        font-size: 50px;
+    }
+
+    #outcome-text {
+        top: 70px;
+        left: 5px;
+        width: 95%;
+        height: 60px;
+        font-size: 40px;
+    }
+
+    #message-text {
+        top: 250px;
+        left: 5px;
+        width: 95%;
+        font-size: 30px;
+    }
+
+    #restart-button {
+        top: 280px;
+        left: 20px;
+        width: 95%;
+        height: 90px;
+    }
+
+    #restart-button img {
+        top: 0;
+        left: 0;
+        width: 90px;
+        height: 90px;
+    }
+
+    #user-option-panel {
+        box-sizing: border-box;
+        top: 370px;
+        left: 0;
+        height: 130px;
+        width: 720px;
+    }
+
+    /* ############################################################################ */
+    /* PANEL WITH OPTIONS FROM WHICH THE USER CAN PICK THEIR MOVE                  */
+    #user-rock-button {
+        width: 90px;
+        height: 90px;
+    }
+
+    #user-rock-button-image {
+        width: 90px;
+        height: 90px;
+    }
+
+    #user-rock-button-image-gray {
+        width: 90px;
+        height: 90px;
+    }
+
+    #user-paper-button {
+        width: 90px;
+        height: 90px;
+    }
+
+    #user-paper-button-image {
+        width: 90px;
+        height: 90px;
+    }
+
+    #user-paper-button-image-gray {
+        width: 90px;
+        height: 90px;
+    }
+
+    #user-scissors-button {
+        width: 90px;
+        height: 90px;
+    }
+
+    #user-scissors-button-image {
+        width: 90px;
+        height: 90px;
+    }
 
 
+    #user-scissors-button-image-gray {
+        width: 90px;
+        height: 90px;
+    }
 
+    #user-lizard-button {
+        width: 90px;
+        height: 90px;
+    }
 
+    #user-lizard-button-image {
+        width: 90px;
+        height: 90px;
+    }
 
+    #user-lizard-button-image-gray {
+        width: 90px;
+        height: 90px;
+    }
 
+    #user-spock-button {
+        width: 90px;
+        height: 90px;
+    }
 
+    #user-spock-button-image {
+        width: 90px;
+        height: 90px;
+    }
 
+    #user-spock-button-image-gray {
+        width: 90px;
+        height: 90px;
+    }
 
-
-    @keyframes message-display {
+    @keyframes message-display-landscape {
         0% {
-            left: 320px;
+            left: 720px;
         }
 
         90% {
@@ -922,20 +1054,213 @@ h1 {
 
 @media (min-width: 1025px) and (max-width: 1280px) {
 
-    /* CSS */
+    header {
+        width: 1025px;
+        margin: 0 auto;
+    }
+
+    h1 {
+        width: 1200px;
+        height: 30px;
+        padding: 5px 0;
+        font-size: 20px;
+        animation: message-display-landscape-middle 10s infinite;
+    }
+
+    /* ################################################################################## */
+    /* LAYOUT OF THE CANVAS                                                                */
+
+    #canvas {
+        width: 1025px;
+        height: 800px;
+    }
+
+    #computer-score {
+        top: 10px;
+        left: 20px;
+        font-size: 50px;
+    }
+
+    #user-score {
+        top: 10px;
+        left: 960px;
+        font-size: 50px;
+    }
+
+    #settings-panel {
+        top: 5px;
+        left: 350px;
+        width: 340px;
+        font-size: 20px;
+    }
+
+    #rounds {
+        font-size: 20px;
+    }
+
+    #rounds-counter-panel {
+        top: 5px;
+        left: 370px;
+        width: 280px;
+        font-size: 50px;
+    }
+
+    #rounds-counter-text {
+        font-size: 17px;
+    }
+
+    #computer-pick-image-panel {
+        top: 220px;
+        left: 70px;
+        width: 250px;
+        height: 250px;
+    }
+
+    #computer-pick-image {
+        top: 0;
+        left: 0;
+        height: 250px;
+        width: 250px;
+    }
+
+    #user-pick-image-panel {
+        top: 220px;
+        left: 710px;
+        width: 250px;
+        height: 250px;
+    }
+
+    #user-pick-image {
+        top: 0;
+        left: 0;
+        height: 250px;
+        width: 250px;
+    }
+
+    #versus-text {
+        top: 280px;
+        left: 430px;
+        font-size: 70px;
+    }
+
+    #outcome-text {
+        top: 140px;
+        left: 5px;
+        width: 95%;
+        height: 60px;
+        font-size: 60px;
+    }
+
+    #message-text {
+        top: 470px;
+        left: 5px;
+        width: 95%;
+        font-size: 30px;
+    }
+
+    #restart-button {
+        top: 550px;
+        left: 20px;
+        width: 95%;
+        height: 100px;
+    }
+
+    #restart-button img {
+        top: 0;
+        left: 0;
+        width: 100px;
+        height: 100px;
+    }
+
+    #user-option-panel {
+        box-sizing: border-box;
+        top:670px;
+        left: 0;
+        height: 130px;
+        width: 1025px;
+    }
+
+    /* ############################################################################ */
+    /* PANEL WITH OPTIONS FROM WHICH THE USER CAN PICK THEIR MOVE                  */
+    #user-rock-button {
+        width: 90px;
+        height: 90px;
+    }
+
+    #user-rock-button-image {
+        width: 90px;
+        height: 90px;
+    }
+
+    #user-rock-button-image-gray {
+        width: 90px;
+        height: 90px;
+    }
+
+    #user-paper-button {
+        width: 90px;
+        height: 90px;
+    }
+
+    #user-paper-button-image {
+        width: 90px;
+        height: 90px;
+    }
+
+    #user-paper-button-image-gray {
+        width: 90px;
+        height: 90px;
+    }
+
+    #user-scissors-button {
+        width: 90px;
+        height: 90px;
+    }
+
+    #user-scissors-button-image {
+        width: 90px;
+        height: 90px;
+    }
 
 
+    #user-scissors-button-image-gray {
+        width: 90px;
+        height: 90px;
+    }
 
+    #user-lizard-button {
+        width: 90px;
+        height: 90px;
+    }
 
+    #user-lizard-button-image {
+        width: 90px;
+        height: 90px;
+    }
 
+    #user-lizard-button-image-gray {
+        width: 90px;
+        height: 90px;
+    }
 
+    #user-spock-button {
+        width: 90px;
+        height: 90px;
+    }
 
+    #user-spock-button-image {
+        width: 90px;
+        height: 90px;
+    }
 
+    #user-spock-button-image-gray {
+        width: 90px;
+        height: 90px;
+    }
 
-
-    @keyframes message-display {
+    @keyframes message-display-landscape-middle {
         0% {
-            left: 320px;
+            left: 1025px;
         }
 
         90% {
@@ -943,12 +1268,14 @@ h1 {
         }
 
         100% {
-            left: -640px;
+            left: -650px;
         }
 
     }
 
 }
+
+
 
 
 /* 
